maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:31: error: reassignment to val
    if (getIndication(i,j)>done){setIndication(i,j,done);done=done+1;(i,j) match {
                                                             ^